# bookokrat

./: .gitignore  CLAUDE.md  Cargo.toml  MATHML_ASCII_README.md  README.md  SVG_SNAPSHOT_TESTING.md  TODO.md  bug.sh  cat.ans  debug_chapter_6_processed.txt  debug_chapter_6_raw.html  debug_clean_html.rs  debug_indented_code_block.txt  debug_placeholder_issue.rs  debug_processed_code_block.txt  debug_raw_code_block.html  debug_text_generation.rs  fix_highlights.py  flake.nix  ghostty_bug.md  ghostty_tmux_relative_bug.sh  mathml_to_ascii.py  migrate_word_ranges.py  migration_plan.md  readme.ans  readme.txt  test_complex_equation.py  test_image_conversion.rs  test_mathml_to_ascii.py  test_normalization.py  test_placeholder_system.rs  test_poc_formatting.rs  test_processed_content.txt  verify_current_processed.txt  verify_current_processing.rs  war.c  war.cpp
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: index.html  index.modern.html  index.terminal.html
examples/: diagnose_pdf_toc.rs  epub_inspector.rs  graphics_overlay_probe.rs  panic_test.rs  simulated_input_example.rs  test_mathml_rust.rs
site/: site.html
src/: annotations.rs  background_image_loader.rs  book_images.rs  book_list.rs  book_manager.rs  book_search.rs  book_stat.rs  bookmark.rs  bookmarks.rs  cli.rs  clipboard.rs  color_mode.rs  comments.rs  event_source.rs  extract.rs  html5ever_text_generator.rs  html_to_markdown.rs  image_placeholder.rs  image_popup.rs  image_storage.rs  jump_list.rs  lib.rs  library.rs  main.rs  main_app.rs  markdown.rs  markdown_renderer.rs  markdown_text_reader.rs  marks.rs  mathml_renderer.rs  navigation_panel.rs  notification.rs  panic_handler.rs  pdf_handler.rs  print.rs  reading_history.rs  search.rs  search_engine.rs  settings.rs  simple_fake_books.rs  (+16 more)
src/components/: mathml_renderer.rs  table.rs
src/config_migration/: file_move.rs  mod.rs
src/export/: comments_exporter.rs  exporter.rs  filename.rs  mod.rs  template.rs
src/images/: background_image_loader.rs  book_images.rs  image_placeholder.rs  image_popup.rs  image_storage.rs
src/inputs/: event_source.rs  key_seq.rs  mod.rs  mouse_tracker.rs  pixel_mouse.rs  terminal_input.rs  text_area_utils.rs
src/keybindings/: action.rs  config.rs  context.rs  defaults.rs  keymap.rs  mod.rs  notation.rs
src/parsing/: html_to_markdown.rs  markdown_renderer.rs  mod.rs  text_generator.rs  text_generator_wrapper.rs  toc_parser.rs
src/pdf/: cache.rs  converter.rs  mod.rs  normal_mode.rs  request.rs  selection.rs  service.rs  state.rs  synctex.rs  types.rs  worker.rs  zoom.rs
src/pdf/kittyv2/: image.rs  mod.rs
src/pdf/kittyv2/kgfx/: lease.rs  metrics.rs  mod.rs  pool.rs  protocol.rs  region.rs  tracker.rs
src/pdf/kittyv2/terminal_canvas/: canvas.rs  encoder.rs  mod.rs  probe.rs  registry.rs  types.rs
src/pdf/parsing/: mod.rs  page_numbers.rs  toc.rs
src/test_utils/: mod.rs  simple_fake_books.rs
src/widget/: book_search.rs  book_stat.rs  chatgpt_popup.rs  comments_viewer.rs  export_menu.rs  help_popup.rs  highlight_palette.rs  hud_message.rs  keybinding_errors_popup.rs  language_select_popup.rs  lookup_popup.rs  marks_popup.rs  mod.rs  popup.rs  reading_history.rs  settings_popup.rs  theme_selector.rs
src/widget/navigation_panel/: book_list.rs  mod.rs  table_of_contents.rs
src/widget/pdf_reader/: mod.rs  navigation.rs  region.rs  rendering.rs  state.rs  types.rs
src/widget/text_reader/: comments.rs  images.rs  mod.rs  navigation.rs  normal_mode.rs  rendering.rs  search.rs  selection.rs  text_selection.rs  types.rs
tests/: image_dynamic_sizing_test.rs  image_placement_tests.rs  keybinding_actions.rs  keybinding_actions_pdf.rs  mouse_scroll_flood_test.rs  scroll_bounds_test.rs  snapshot_assertions.rs  snapshot_tests.rs  svg_generation.rs  svg_snapshots.rs  test_ctrl_o.rs  test_report.rs  vim_motion_component_tests.rs  visual_diff.rs
tests/testdata/: digital_frontier.epub
tests/testdata/synctex/: generate_golden.sh  test_comprehensive.aux  test_comprehensive.fdb_latexmk  test_comprehensive.fls  test_comprehensive.out  test_comprehensive.tex  test_comprehensive.toc  test_comprehensive_golden.json  test_main.tex  test_main_golden.json  test_multifile.tex  test_multifile_golden.json
tests/testdata/synctex/input_files/: chapter_one.tex  chapter_three.tex  chapter_two.tex
themes/: _template.yaml
tools/: create_toc_test_pdf.py
vhs_tests/: .gitignore  PLAN.md  export_docsite_help.sh  run.sh
vhs_tests/lib/: image_compare.sh  kitty_manager.sh  report_generator.sh  tape_runner.sh  wezterm_manager.sh  window_manager.sh
vhs_tests/tapes/: demo_combined.tape  demo_epub.tape  demo_pdf.tape  docsite_epub.tape  docsite_pdf.tape  normal_mode_cursor_bug.tape  pdf_comments.tape  pdf_smoke.tape
