[package]
name = "bookrat"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A TUI EPUB reader application"
default-run = "bookrat"

[lib]
name = "bookrat"
path = "src/lib.rs"

[[bin]]
name = "bookrat"
path = "src/main.rs"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.27.0"
epub = "1.1.0"
anyhow = "1.0.79"
simplelog = "0.12.1"
html2text = "0.2.1"
regex = "1.10.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
textwrap = "0.16"
better-panic = "0.3"
human-panic = "2.0"
libc = "0.2"
pprof = { version = "0.15", features = ["flamegraph", "protobuf-codec"] }
arboard = "3.4"
zip = "0.6"
tempfile = "3.8"
ratatui-image = { path = "../ratatui-image", features = ["crossterm"] }
image = "0.25"
fast_image_resize = "3.0"
imagesize = "0.13"
open = "5.3"
roxmltree = "0.18"
once_cell = "1.19"
html5ever = "0.27"
markup5ever_rcdom = "0.3"

[dev-dependencies]
snapbox = { version = "0.6", features = ["term-svg"] }
anstyle = "1.0"
anstyle-svg = "0.1.5"
tempfile = "3.8"
walkdir = "2.4"

[profile.release]
debug = true

[build]
target = "aarch64-apple-darwin"
