[package]
name = "bookokrat"
version = "0.3.5"
edition = "2024"
rust-version = "1.86"
authors = ["Rafael Bagmanov <bugzmanov@gmail.com>"]
license = "AGPL-3.0-or-later"
description = "A terminal-based EPUB/PDF Books reader"
default-run = "bookokrat"
repository="https://github.com/bugzmanov/bookokrat"
homepage="https://bugzmanov.github.io/bookokrat/"
readme = "README.md"
keywords = ["tui", "ratatui", "epub", "pdf", "reader"]
categories = ["command-line-interface"]
exclude = [
  "vhs_tests/**",
  "vhs_test.pdf",
  "docs/**",
  "target/**",
  "tmp/**",
  "tmp-release/**",
  "reports/**",
  "experiments/**",
  "temp_images/**",
  "logo.inspirations/**",
  "tools/**",
  "*.epub",
  "*.pdf",
  "*.log",
  "flamegraph.svg",
  "bookmarks.json",
]

[lib]
name = "bookokrat"
path = "src/lib.rs"

[[bin]]
name = "bookokrat"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30.0", features = ["underline-color"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
epub = "2.1.5"
anyhow = "1.0.79"
simplelog = "0.12.1"
# html2text = "0.2.1"
regex = "1.10.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
textwrap = "0.16"
better-panic = "0.3"
human-panic = "2.0"
libc = "0.2"
pprof = { version = "0.15", features = ["flamegraph", "protobuf-codec"] }
arboard = { version = "3.4", features = ["wayland-data-control"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3.8"
# Restrict image formats to reduce build time; enable more via features below.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
fast_image_resize = "3.0"
imagesize = "0.13"
resvg = { version = "0.45.1", optional = true }
open = "5.3"
roxmltree = "0.18"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
# fuzzy-matcher = "0.3"
serde_yaml = "0.9"
md5 = "0.7"
dirs = "5.0"
unicode-width = "0.2.0"
# ansi-to-tui = "7.0.0"
vt100 = "0.15"
codepage-437 = "0.1.0"
# Vendored ratatui-image dependencies
icy_sixel = "0.1.1"
base64-simd = "0.8"
rand = "0.8.5"
thiserror = "1.0.59"
flate2 = "1.0"
png = "0.17"
walkdir = "2.4"

# PDF rendering dependencies (optional, enabled with `pdf` feature)
mupdf = { version = "0.6.0", default-features = false, features = ["svg", "system-fonts", "img"], optional = true }
flume = { version = "0.12.0", default-features = false, optional = true }
wide = { version = "0.7", optional = true }
lru = { version = "0.12", optional = true }
rayon = { version = "1.11.0", default-features = false, optional = true }
base64 = { version = "0.22", optional = true }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38.4", features = ["stdio", "termios", "fs"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", default-features = false, features = [
    "std",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[dev-dependencies]
bookokrat = { path = ".", features = ["test-utils"] }
snapbox = { version = "0.6", features = ["term-svg"] }
anstyle = "1.0"
anstyle-svg = "0.1.5"
tempfile = "3.8"
serial_test = "3.2"

[features]
default = ["pdf"]
test-utils = []
serde = []
pdf = ["mupdf", "flume", "wide", "lru", "rayon", "base64"]
svg = ["resvg"]
image-bmp = ["image/bmp"]
image-tiff = ["image/tiff"]
image-webp = ["image/webp"]
image-avif = ["image/avif"]
image-exr = ["image/exr"]
image-qoi = ["image/qoi"]
image-hdr = ["image/hdr"]
image-ico = ["image/ico"]
image-pnm = ["image/pnm"]
image-tga = ["image/tga"]
image-dds = ["image/dds"]
image-ff = ["image/ff"]
zip-bzip2 = ["zip/bzip2"]
zip-zstd = ["zip/zstd"]

[[example]]
name = "diagnose_pdf_toc"
required-features = ["pdf"]

[profile.release]
debug = false
strip = true
lto = "thin"
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
incremental = true
strip = false
